fix indentation of multi-line comments